# faiss-rs

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
faiss-sys/: Cargo.toml  build.rs
faiss-sys/ci/: install_faiss_c.sh
faiss-sys/src/: lib.rs  multibuf.rs
faiss-sys/src/cpp/: multibuf.cpp  multibuf.h
src/: lib.rs
src/index/: io.rs
