[package]
name = "faiss-sys"
description = "Native bindings for Faiss"
version = "0.6.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/faiss-rs"
links = "faiss_c"
categories = ["external-ffi-bindings", "algorithms"]
keywords = ["cbir", "clustering", "index", "similarity", "bindings"]
edition = "2021"

[features]
gpu = []

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
features = ["gpu"]

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
